--- a/TweetishApp.csproj
+++ b/TweetishApp.csproj
@@ -5,6 +5,12 @@
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
 <ItemGroup>
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    <PrivateAssets>all</PrivateAssets>
+  </PackageReference>
+  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" />
   <PackageReference Include="nunit" Version="3.12.0" />
   <PackageReference Include="NUnit3TestAdapter" Version="3.16.0" />
   <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
