re-use components in js

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build-tweet-create": "parcel build ./wwwroot/js/tweets/create/Main.jsx --out-dir ./wwwroot/dist/js/tweets/create/",
-    "build-list-own-tweets": "parcel build ./wwwroot/js/tweets/listOwn/Main.jsx --out-dir ./wwwroot/dist/js/tweets/listOwn/"
+    "build-list-tweets": "parcel build ./wwwroot/js/tweets/list/Main.jsx --out-dir ./wwwroot/dist/js/tweets/list/"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
