--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "build-tweet-create": "parcel build ./wwwroot/js/tweets/create/Main.jsx --out-dir ./wwwroot/dist/js/tweets/create/",
-    "build-list-tweets": "parcel build ./wwwroot/js/tweets/list/Main.jsx --out-dir ./wwwroot/dist/js/tweets/list/"
+    "build-list-tweets": "parcel build ./wwwroot/js/tweets/list/Main.jsx --out-dir ./wwwroot/dist/js/tweets/list/",
+    "build-follow-btn": "parcel build ./wwwroot/js/following/followBtn/Main.jsx --out-dir ./wwwroot/dist/js/following/followBtn/"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
