add search users

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build-tweet-create": "parcel build ./wwwroot/js/tweets/create/Main.jsx --out-dir ./wwwroot/dist/js/tweets/create/",
     "build-list-tweets": "parcel build ./wwwroot/js/tweets/list/Main.jsx --out-dir ./wwwroot/dist/js/tweets/list/",
-    "build-follow-btn": "parcel build ./wwwroot/js/following/followBtn/Main.jsx --out-dir ./wwwroot/dist/js/following/followBtn/"
+    "build-follow-btn": "parcel build ./wwwroot/js/following/followBtn/Main.jsx --out-dir ./wwwroot/dist/js/following/followBtn/",
+    "build-search-users": "parcel build ./wwwroot/js/users/search/Main.jsx --out-dir ./wwwroot/dist/js/users/search/"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
